# originoasis

./: BDDOriginOasis.sql  LICENSE  README.md  pyproject.toml
.github/workflows/: main_originoasis.yml
campanas/: __init__.py  admin.py  apps.py  hooks.py  models.py  signals.py  urls.py  views.py
campanas/migrations/: 0001_initial.py  0002_alter_campaign_beneficiary.py  0003_campaign_percentage_of_target.py  0004_contribution_invoice_contribution_status.py  0005_remove_contribution_invoice.py  0006_alter_contribution_date.py  0007_alter_campaign_photo.py
campanas/templates/: analytics.html  beneficiarys.html  campaign_detail.html  campaings.html  cancelled.html  index.html  landing.html  paypal.html  signin.html  signup.html  successful.html
campanas/templatetags/: custom_filters.py
crowfunding/: settings.py  urls.py
data/: Campaings.csv  categorys.csv  categorys.txt  categorys1.csv
scripts/: campaing_feeder.py  category_feeder.py  users_feeder.py  vehiculo_feeder.py
static/css/: originoasis_style.css  styles.css
static/images/: views.py
static/js/: main.js  signin.js
